Changed to use a Disk backed Queue instead of array
Added DiskQueue that allows the user to configure a maximum number of
items to hold in memory before spilling over to disk in a configurable
location. This should allow for the processing of sets of URIs that
exceed available memory.

closes issue #18